# Patterns

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/behavioral/: ChainOfResponsibility.h  Command.h  Iterator.h  Observer.h  State.h  Strategy.h  TemplateMethod.h  info.txt
include/creational/: AbstractFactory.h  Builder.h  FactoryMethod.h  ObjectPool.h  Prototype.h  Singleton.h  info.txt
include/structural/: Adapter.h  AdapterClassic.h  AdapterPrivateInheritance.h  Bridge.h  Composite.h  Decorator.h  Facade.h  Flyweight.h  Proxy.h  info.txt
include/structural/utils/: LoggerImpl.h
script/: cmakegen-xcode.sh  unix-build-debug.sh  unix-clean.sh
src/behavioral/: ChainOfResponsibility.cpp  Command.cpp  Iterator.cpp  Observer.cpp  State.cpp  Strategy.cpp  TemplateMethod.cpp
src/creational/: AbstractFactory.cpp  Builder.cpp  FactoryMethod.cpp  ObjectPool.cpp  Prototype.cpp  Singleton.cpp
src/structural/: Adapter.cpp  AdapterClassic.cpp  AdapterPrivateInheritance.cpp  Bridge.cpp  Composite.cpp  Decorator.cpp  Facade.cpp  Flyweight.cpp  Proxy.cpp
tests/: AbstractFactoryTests.cpp  AdapterTests.cpp  BridgeTests.cpp  BuilderTests.cpp  CMakeLists.txt  ChainOfResponsibilityTests.cpp  CommandTests.cpp  CompositeTests.cpp  DecoratorTests.cpp  FacadeTests.cpp  FactoryMethodTests.cpp  FlyweightTests.cpp  IteratorTests.cpp  ObjectPoolTests.cpp  ObserverTests.cpp  PrototypeTests.cpp  ProxyTests.cpp  SingletonTests.cpp  StateTests.cpp  StrategyTests.cpp  TemplateMethodTests.cpp
